--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,3 @@
-# Prerequisites
-*.d
-
-# Object files
-*.o
-*.ko
-*.obj
-*.elf
-
-# Linker output
-*.ilk
-*.map
-*.exp
-
-# Precompiled Headers
-*.gch
-*.pch
-
 # Libraries
 *.lib
 *.a
@@ -50,3 +32,9 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+# Other
+SDK/
+.vs/
+obj/
+bin/
