--- a/SRC/NvidiaMaxine/VFXSamples/DenoiseEffectApp/DenoiseEffectApp.csproj
+++ b/SRC/NvidiaMaxine/VFXSamples/DenoiseEffectApp/DenoiseEffectApp.csproj
@@ -1,14 +1,23 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>net6.0-windows</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+	<PropertyGroup>
+		<OutputType>Exe</OutputType>
+		<TargetFramework>net6.0-windows</TargetFramework>
+		<Nullable>disable</Nullable>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\..\NvidiaMaxine.VideoEffects\NvidiaMaxine.VideoEffects.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\..\NvidiaMaxine.VideoEffects\NvidiaMaxine.VideoEffects.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<PackageReference Include="OpenCvSharp4" Version="4.6.0.20220608" />
+	</ItemGroup>
+	<ItemGroup Condition=" $(TargetFramework.Contains('windows')) or '$(TargetFramework)' == 'net472' or '$(TargetFramework)' == 'netcoreapp3.1' ">
+		<PackageReference Include="OpenCvSharp4.runtime.win" Version="4.6.0.20220608" />
+	</ItemGroup>
+	<ItemGroup Condition="'$(TargetFramework)' == 'net5.0' or '$(TargetFramework)' == 'Xamarin.Mac20' ">
+		<Reference Include="netstandard" />
+	</ItemGroup>
 
 </Project>
