--- a/SRC/NvidiaMaxine/NvidiaMaxine.VideoEffects/NvidiaMaxine.VideoEffects.csproj
+++ b/SRC/NvidiaMaxine/NvidiaMaxine.VideoEffects/NvidiaMaxine.VideoEffects.csproj
@@ -1,9 +1,19 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net6.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+		<Langversion>10.0</Langversion>
+		<AllowUnsafeBlocks>True</AllowUnsafeBlocks>
+	</PropertyGroup>
+
+	<ItemGroup>
+	  <Folder Include="CUDA\" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<PackageReference Include="OpenCvSharp4" Version="4.6.0.20220608" />
+	</ItemGroup>
 
 </Project>
