--- a/SRC/NvidiaMaxine/VFXSamples/MainDemo/MainDemo.csproj
+++ b/SRC/NvidiaMaxine/VFXSamples/MainDemo/MainDemo.csproj
@@ -5,6 +5,7 @@
 		<TargetFramework>net6.0-windows</TargetFramework>
 		<Nullable>disable</Nullable>
 		<UseWPF>true</UseWPF>
+		<PlatformTarget>x64</PlatformTarget>
 	</PropertyGroup>
 
 	<ItemGroup>
