--- a/SRC/NvidiaMaxine/VFXSamples/MainDemo/MainDemo.csproj
+++ b/SRC/NvidiaMaxine/VFXSamples/MainDemo/MainDemo.csproj
@@ -9,6 +9,10 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <None Include="..\..\.editorconfig" Link=".editorconfig" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<ProjectReference Include="..\..\NvidiaMaxine.VideoEffects\NvidiaMaxine.VideoEffects.csproj" />
 	</ItemGroup>
 
