--- a/SRC/NvidiaMaxine/NvidiaMaxine.VideoEffects/NvidiaMaxine.VideoEffects.csproj
+++ b/SRC/NvidiaMaxine/NvidiaMaxine.VideoEffects/NvidiaMaxine.VideoEffects.csproj
@@ -5,7 +5,7 @@
 		<Nullable>disable</Nullable>
 		<Langversion>10.0</Langversion>
 		<AllowUnsafeBlocks>True</AllowUnsafeBlocks>
-		<Platforms>AnyCPU;x64</Platforms>
+		<Platforms>x64</Platforms>
 		<GenerateDocumentationFile>True</GenerateDocumentationFile>
 		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
 		<Title>NvidiaMaxine.VideoEffects package (non-official)</Title>
@@ -25,7 +25,7 @@
 
 	<PropertyGroup>
 		<DefineConstants>$(DefineConstants);OPENCV</DefineConstants>
-		<NoWarn>1701;1702;SA1101;S112;SA1129</NoWarn>
+		<NoWarn>1701;1702;SA1101;S112;SA1129,SA1309</NoWarn>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -47,6 +47,7 @@
 		<PackageReference Include="DirectShowLib.Standard" Version="2.1.0" />
 		<PackageReference Include="OpenCvSharp4" Version="4.6.0.20220608" />
 	</ItemGroup>
+	
 	<ItemGroup Condition=" $(TargetFramework.Contains('windows')) or '$(TargetFramework)' == 'net472' or '$(TargetFramework)' == 'netcoreapp3.1' ">
 		<PackageReference Include="OpenCvSharp4.runtime.win" Version="4.6.0.20220608" />
 	</ItemGroup>
@@ -56,7 +57,6 @@
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-
 		<PackageReference Include="SonarAnalyzer.CSharp" Version="8.50.0.58025">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
