--- a/SRC/NvidiaMaxine/VFXSamples/DenoiseEffectApp/DenoiseEffectApp.csproj
+++ b/SRC/NvidiaMaxine/VFXSamples/DenoiseEffectApp/DenoiseEffectApp.csproj
@@ -4,7 +4,7 @@
 		<OutputType>Exe</OutputType>
 		<TargetFramework>net6.0-windows</TargetFramework>
 		<Nullable>disable</Nullable>
-		<Platforms>AnyCPU;x64</Platforms>
+		<Platforms>x64</Platforms>
 	</PropertyGroup>
 
 	<ItemGroup>
