--- a/SRC/NvidiaMaxine/VFXSamples/MainDemo/MainDemo.csproj
+++ b/SRC/NvidiaMaxine/VFXSamples/MainDemo/MainDemo.csproj
@@ -6,6 +6,7 @@
 		<Nullable>disable</Nullable>
 		<UseWPF>true</UseWPF>
 		<PlatformTarget>x64</PlatformTarget>
+		<Platforms>x64</Platforms>
 	</PropertyGroup>
 
 	<ItemGroup>
