--- a/SRC/NvidiaMaxine/NvidiaMaxine.VideoEffects/NvidiaMaxine.VideoEffects.csproj
+++ b/SRC/NvidiaMaxine/NvidiaMaxine.VideoEffects/NvidiaMaxine.VideoEffects.csproj
@@ -46,6 +46,7 @@
 	<ItemGroup>
 		<PackageReference Include="DirectShowLib.Standard" Version="2.1.0" />
 		<PackageReference Include="OpenCvSharp4" Version="4.6.0.20220608" />
+		<PackageReference Include="System.Drawing.Common" Version="6.0.0" />
 	</ItemGroup>
 	
 	<ItemGroup Condition=" $(TargetFramework.Contains('windows')) or '$(TargetFramework)' == 'net472' or '$(TargetFramework)' == 'netcoreapp3.1' ">
